--- a/Templates/post.html
+++ b/Templates/post.html
@@ -8,5 +8,28 @@
 
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>{{ post }}</h1>
+<table>
+            <tr>
+                <td>
+                    Заголовок
+                </td>
+                <td>
+                    Содержание
+                </td>
+                <td>
+                    Время добавления
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    {{ post.article_title }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
+                </td>
+                <td>
+                    {{ post.article_text | truncatechars:80 }}
+                </td>
+                <td>
+                    {{ post.article_time_in | date:'d-m-y H:i'}}
+                </td>
+            </tr>
+        </table>
 {% endblock content %}
