--- a/Templates/posts.html
+++ b/Templates/posts.html
@@ -8,5 +8,33 @@
 
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>{{ posts }}</h1>
+    <h1>Всего публикаций: {{ posts | length }}</h1>
+    <h3>{{ time_now | date:'M d Y'}}</h3>
+    <h3> {{ value1 | default_if_none:"Ничего" }} </h3> <!-- Здесь, если в переменной value1 будет записано None, то выведется текст НИЧЕГО -->
+    <h3> {{ test | default:"A тут пустая строка или список и т.д." }} </h3>
+    <hr>
+    {% if posts %} <!-- Если есть товары, то выводим таблицу с ними -->
+        <table>
+            <tr>
+                <td>
+                    Заголовок
+                </td>
+                <td>
+                    Описание
+                </td>
+            </tr>
+        {% for post in posts %} <!-- Для каждого товара будете генерироваться новая строчка, т.е. новый html код. При этом сам цикл работет точно также, как и в python. product — переменная цикла, т.е. наш товар взятый из общего списка -->
+            <tr>
+                <td>
+                    {{ post.article_title }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
+                </td>
+                <td>
+                    {{ post.article_text | truncatechars:50 }}
+                </td>
+            </tr>
+        {% endfor %}
+        </table>
+    {% else %}
+        <h2>Публикаций нет!</h2>
+    {% endif %}
 {% endblock content %}
