For Homework D3.4 fix (add filters in templates)

--- a/Templates/post.html
+++ b/Templates/post.html
@@ -1,6 +1,8 @@
 <!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
 {% extends 'default.html' %}
 
+{% load custom_filters %}
+
 <!-- Название у нас будет proudcts -->
 {% block title %}
 Детали статьи
@@ -22,10 +24,10 @@
             </tr>
             <tr>
                 <td>
-                    {{ post.article_title }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
+                    {{ post.article_title | censor }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
                 </td>
                 <td>
-                    {{ post.article_text | truncatechars:80 }}
+                    {{ post.article_text | censor | truncatechars:80 }}
                 </td>
                 <td>
                     {{ post.article_time_in | date:'d-m-y H:i'}}
