--- a/Templates/posts.html
+++ b/Templates/posts.html
@@ -1,6 +1,8 @@
 <!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
 {% extends 'default.html' %}
 
+{% load custom_filters %}
+
 <!-- Название у нас будет proudcts -->
 {% block title %}
 Статьи
@@ -26,10 +28,10 @@
         {% for post in posts %} <!-- Для каждого товара будете генерироваться новая строчка, т.е. новый html код. При этом сам цикл работет точно также, как и в python. product — переменная цикла, т.е. наш товар взятый из общего списка -->
             <tr>
                 <td>
-                    {{ post.article_title }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
+                    {{ post.article_title | censor }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
                 </td>
                 <td>
-                    {{ post.article_text | truncatechars:50 }}
+                    {{ post.article_text | censor | truncatechars:50 }}
                 </td>
             </tr>
         {% endfor %}
