--- a/Templates/post.html
+++ b/Templates/post.html
@@ -11,27 +11,28 @@
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
 <table>
-            <tr>
-                <td>
+            <thead>
+                <th>
                     Заголовок
-                </td>
-                <td>
+                </th>
+                <th>
                     Содержание
-                </td>
-                <td>
+                </th>
+                <th>
                     Время добавления
-                </td>
-            </tr>
+                </th>
+            </thead>
             <tr>
                 <td>
                     {{ post.article_title | censor }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
                 </td>
                 <td>
-                    {{ post.article_text | censor | truncatechars:80 }}
+                    {{ post.article_text | censor }}
                 </td>
                 <td>
                     {{ post.article_time_in | date:'d-m-y H:i'}}
                 </td>
             </tr>
         </table>
+<a href="{% url 'posts_full' %}"><u>Назад</u></a>
 {% endblock content %}
