--- a/Templates/posts.html
+++ b/Templates/posts.html
@@ -5,38 +5,41 @@
 
 <!-- Название у нас будет proudcts -->
 {% block title %}
-Статьи
+Публикации
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-    <h1>Публикации</h1>
-    <h3>{{ time_now | date:'M d Y'}}</h3>
-    <hr>
-    {% if posts %} <!-- Если есть товары, то выводим таблицу с ними -->
-        <table>
-            <tr>
-                <td>
-                    Заголовок
-                </td>
-                <td>
-                    Описание
-                </td>
-            </tr>
-        {% for post in posts %} <!-- Для каждого товара будете генерироваться новая строчка, т.е. новый html код. При этом сам цикл работет точно также, как и в python. product — переменная цикла, т.е. наш товар взятый из общего списка -->
-            <tr>
-                <td>
-                    {{ post.article_title | censor }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
-                </td>
-                <td>
-                    {{ post.article_text | censor | truncatechars:50 }}
-                </td>
-            </tr>
-        {% endfor %}
-        </table>
-    {% else %}
-        <h2>Публикаций нет!</h2>
-    {% endif %}
+<h1>Публикации</h1>
+<h3>{{ time_now | date:'M d Y'}}</h3>
+<hr>
+{% if posts %} <!-- Если есть товары, то выводим таблицу с ними -->
+<table>
+    <thead>
+        <th>
+            Заголовок
+        </th>
+        <th>
+            Описание
+        </th>
+    </thead>
+    {% for post in posts %} <!-- Для каждого товара будете генерироваться новая строчка, т.е. новый html код. При этом сам цикл работет точно также, как и в python. product — переменная цикла, т.е. наш товар взятый из общего списка -->
+    <tr>
+        <td>
+            {{ post.article_title | censor }} <!-- не забываем что переменные в шаблоне ничем не отличаются от переменных в python. Здесь также можно получать доступ к полям класса. Например здесь мы выводим имя, в следующем столбце описание, и т.д.  -->
+        </td>
+        <td>
+            {{ post.article_text | censor | truncatechars:50 }}
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+{% else %}
+    <h2>Публикаций нет!</h2>
+{% endif %}
+
+<a href="{% url 'posts_full' %}">Редактирование\Полный список публикаций</a> <br>
+
 <!-- Проверяем что поддерживается постраничный вывод -->
 {% if is_paginated %}
 
