Task D5.4 LoginRequiredMixin + Allauth integrations

--- a/Templates/posts.html
+++ b/Templates/posts.html
@@ -11,7 +11,7 @@
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
 <h1>Публикации</h1>
-<h3>{{ time_now | date:'M d Y'}}</h3>
+<h3>{{ time_now }}</h3>
 <hr>
 {% if posts %} <!-- Если есть товары, то выводим таблицу с ними -->
 <table>
