--- a/Templates/posts_full.html
+++ b/Templates/posts_full.html
@@ -10,14 +10,26 @@
 <table>
     <thead>
         <th>
+            Автор
+        </th>
+        <th>
             Заголовок
         </th>
         <th>
             Описание
         </th>
+        <th>
+            Категория
+        </th>
+        <th>
+            Время публикации
+        </th>
     </thead>
     {% for post in filter.qs %} <!-- поменяем products на filter.qs, т.к. теперь мы забираем уже отобранную по каким-то параметрам информацию -->
     <tr>
+        <td>
+            {{ post.article_author }}
+        </td>
         <td>
             <a href="{% url 'post_detail' post.id %}">{{ post.article_title | title | censor }}</a>
             <a href="{% url 'post_update' post.id %}"><u>Редактировать</u></a>
@@ -25,6 +37,12 @@
         </td>
         <td>
             {{ post.article_text | censor | truncatechars:50}}
+        </td>
+        <td>
+            {{ post.article_category.all | join:", " }}
+        </td>
+        <td>
+            {{ post.article_time_in | date:"d-m-Y H:i" }}
         </td>
     </tr>
     {% endfor %}
