--- a/Templates/post_create.html
+++ b/Templates/post_create.html
@@ -6,7 +6,7 @@
 <h3>Детали публикации</h3>
 <form method="POST">
     {% csrf_token %}
-    {{ form }} <!-- Теперь нам нужна только готовая форма и кнопка -->
+    {{ form.as_p }} <!-- Теперь нам нужна только готовая форма и кнопка -->
     <input type="submit" value="Добавить публикацию">
 </form>
 <a href="{% url 'posts_full' %}"><u> Отмена </u></a>
