--- a/Templates/mail_subscription_update.html
+++ b/Templates/mail_subscription_update.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Ув. читатель velosiped.test ,</h2>
-    <p>Новая публикация <i>{{ new_post }}</i> в категории {{ new_post_category }}<br>Сайт публикаций velosiped.test</p>
+    <p>Новая публикация <i>{{ new_post }}</i> в категории {{ new_post_category }} по ссылке http://127.0.0.1:8000/news/{{ new_post_id }}<br>Сайт публикаций velosiped.test</p>
 </body>
 </html>
