--- a/Templates/default.html
+++ b/Templates/default.html
@@ -25,17 +25,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="/news/">Новостной сайт</a>
+      <a class="navbar-brand" href={% url 'index' %}>Новостной сайт</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/news/">Главная</a>
+            <a class="nav-link" href={% url 'index' %}>Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/news/full/">Редакция</a>
+            <a class="nav-link" href={% url 'posts_full' %}>Редакция</a>
         </ul>
       </div>
     </div>
