--- a/Templates/post_create.html
+++ b/Templates/post_create.html
@@ -9,5 +9,5 @@
     {{ form.as_p }} <!-- Теперь нам нужна только готовая форма и кнопка -->
     <input type="submit" value="Добавить публикацию">
 </form>
-<a href="{% url 'posts_full' %}"><u> Отмена </u></a>
+<a href={% url 'posts_full' %}><u> Отмена </u></a>
 {% endblock content %}
