--- a/Templates/base.html
+++ b/Templates/base.html
@@ -1,3 +1,6 @@
+{% comment WTF %}
+TODO Разобраться, что это за шаблон загадочный
+{% endcomment %}
 <html lang="en">
     <head>
         <title>{% block head_title %}{% endblock head_title %}</title>
