--- a/Templates/post.html
+++ b/Templates/post.html
@@ -1,5 +1,8 @@
 {% extends 'default.html' %}
-{% load custom_filters %}
+{% comment About %}
+Article details page
+{% endcomment %}
+{% load custom_filters_and_tags %}
 
 {% block title %}
 Детали статьи
