--- a/Templates/post_create.html
+++ b/Templates/post_create.html
@@ -1,4 +1,7 @@
 {% extends 'default.html' %}
+{% comment About %}
+Article create/update page
+{% endcomment %}
 
 {% block title %} Список публикаций {% endblock title %}
 
