--- a/Templates/search.html
+++ b/Templates/search.html
@@ -1,6 +1,9 @@
 {% extends 'default.html' %}
+{% comment About %}
+Search page
+{% endcomment %}
 
-{% load custom_filters %}
+{% load custom_filters_and_tags %}
 
 {% block title %}
 Поиск
