--- a/Templates/mail_subscription_update.html
+++ b/Templates/mail_subscription_update.html
@@ -1,3 +1,6 @@
+{% comment About %}
+Mail notification for category subscribers after updates in category
+{% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
