--- a/Templates/post_delete.html
+++ b/Templates/post_delete.html
@@ -1,6 +1,9 @@
 {% extends 'default.html' %}
+{% comment About %}
+Article delete page
+{% endcomment %}
 
-{% load custom_filters %}
+{% load custom_filters_and_tags %}
 
 {% block title %} Публикации {% endblock title %}
 
