--- a/Templates/default.html
+++ b/Templates/default.html
@@ -4,6 +4,7 @@ Inherited Template
 {# This is comment also #}
 {% load static %}
 {% load cache %}
+{% load i18n %}
 
 {% cache 60 static_1%}
 <!DOCTYPE html>
@@ -29,17 +30,17 @@ Inherited Template
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href={% url 'index' %}>Новостной сайт</a>
+      <a class="navbar-brand" href={% url 'index' %}>{% translate 'Новостной сайт' %}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href={% url 'index' %}>Главная</a>
+            <a class="nav-link" href={% url 'index' %}>{% translate 'Главная' %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href={% url 'posts_full' %}>Редакция</a>
+            <a class="nav-link" href={% url 'posts_full' %}>{% translate 'Редакция' %}</a>
         </ul>
       </div>
     </div>
