--- a/Templates/posts.html
+++ b/Templates/posts.html
@@ -3,21 +3,23 @@
 All articles page
 {% endcomment %}
 {% load custom_filters_and_tags %}
+{% load i18n %}
 
 
 
 {% block content %}
-<h1>Публикации</h1>
-    <h3>{{ time_now | date:"d E Y года" }}<br>{% time "%H:%M" %}</h3> <!-- Added custom tag "time" -->
+{% include 'language_switch_form.html' %}
+<h1>{% translate 'Публикации'%}</h1>
+    <h3>{% blocktranslate with time=time_now|date:"d E Y"%}{{ time }} года{% endblocktranslate %}<br>{% time "%H:%M" %}</h3> <!-- Added custom tag "time" -->
 <hr>
 <table>
     <thead>
         <tr>
-            <th>{{ 'автор' | capfirst }}</th> <!-- Test "First capital letter - filter"   -->
-            <th>{{ 'Заголовок' }}</th>
-            <th>{{ 'Описание' }}</th>
-            <th>{{ 'Категория' }}</th>
-            <th>{{ 'Время$$$ публикации' | cut:'$' }}</th><!-- Test "Cut- filter" -->
+            <th>{% translate 'автор'|capfirst%}</th> <!-- Test "First capital letter - filter"   -->
+            <th>{% translate 'Заголовок'%}</th>
+            <th>{% translate 'Описание'%}</th>
+            <th>{% translate 'Категория'%}</th>
+            <th>{% translate 'Время$$$ публикации'|cut:'$'%}</th><!-- Test "Cut- filter" -->
         </tr>
     </thead>
     <tbody>
@@ -35,12 +37,12 @@ All articles page
                     {% if user in all_cat_sub %}
                         <form action = "{% url 'subscribe' %}" method="POST">
                         {% csrf_token %}
-                        <button type="submit" name="category_id" value="{{ category.id }}">Отписаться от {{ category }}</button>
+                        <button type="submit" name="category_id" value="{{ category.id }}">{% translate 'Отписаться от'%} {{ category }}</button>
                         </form>
                     {% else %}
                         <form action = "{% url 'subscribe' %}"  method="POST">
                         {% csrf_token %}
-                        <button type="submit" name="category_id" value="{{ category.id }}">Подписаться на {{ category }}</button>
+                        <button type="submit" name="category_id" value="{{ category.id }}">{% translate 'Подписаться на'%} {{ category }}</button>
                         </form>
                     {% endif %}
                     {% endwith %}
@@ -50,11 +52,11 @@ All articles page
         </tr>
         {% endwith %}
     {% empty %} <!-- Part of cycle for (built-in Django tags). If list posts is empty, then: -->
-        <h2>Публикаций нет!</h2>
+        <h2>{% translate 'Публикаций нет!'%}</h2>
     {% endfor %}
     </tbody>
 </table>
-<a href={% url 'posts_full' %}>Редактирование\Полный список публикаций</a> <br>
+<a href={% url 'posts_full' %}>{% translate 'Редактирование\Полный список публикаций'%}</a> <br>
 
 <!-- Проверяем что поддерживается постраничный вывод -->
 {% if is_paginated %}
